apps/Grafana/referencegrant.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproute-to-services-grafana
  namespace: monitoring  # Namespace dove vivono i Service
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: envoy-gateway-system
  to:
    - group: ""        # Core API group (vuoto) per Service
      kind: Service
      name: grafana
