apps/Grafana/httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-httproute
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system
#     sectionName: http
  hostnames:
    - "IL TUO HOST"
  rules:
    # Regola principale per SSR su /
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          namespace: monitoring
          port: 3000
