apps/Grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <IL_TUO_HOST>   # dominio del certificato
      secretName: <IL_TUO_SECRETCERTIFICATE>                # il Secret che hai creato
  rules:
    - host: <IL_TUO_HOST>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
